background animations added

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </div>
             </div>
             <div class="parallax-window parallax3" data-parallax="scroll" data-image-src="images/wh.jpeg" data-position="-10px 0%">
-               <div class="how" id="how">
+               <div class="how hero" id="how">
                    <h1>Here's how it works</h1>
                    <p>Our fully inclusive 'Surprise Wish' package can be accessed via the app and online and allows you to</p>
                    <img class="img-responsive icon" src="images/ticket_icon.png">
