link to app store added

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 
                             </div>
                             <div class="store">
-                                <div><img src="images/google.png" style="float:left;animation-delay: .6s" class="img-responsive strImg1"></div>
-                                <div>
-                                    <img src="images/app_store.png" style="float:right;animation-delay: .6s" class="img-responsive strImg2"></div>
-                            </div>
+                                <div><a href="https://play.google.com/store/apps/details?id=co.hushush.users"><img src="images/google.png" style="float:left;animation-delay: .6s" class="img-responsive strImg1"></a></div>
+                                <div><a href="io.html">
+                                    <img src="images/app_store.png" style="float:right;animation-delay: .6s" class="img-responsive strImg2"></a></div>
+                                </div>
                         </div>
 
                         <div id="couple" class="play">
@@ -163,8 +163,8 @@
                            app today</p>
                        <div class="store">
 
-                           <div class="str2"><img src="images/google.png" class="img-responsive" style="float:left;"></div>
-                           <div class="str2"><img src="images/app_store.png" class="img-responsive" style="float:right;"></div>
+                           <div class="str2"><a href="https://play.google.com/store/apps/details?id=co.hushush.users"><img src="images/google.png" class="img-responsive" style="float:left;"></a></div>
+                           <div class="str2"><a href="io.html"><img src="images/app_store.png" class="img-responsive" style="float:right;"></a></div>
                        </div>
                    </div>
                    </div>
