social media links added

--- a/index.html
+++ b/index.html
@@ -176,6 +176,17 @@
                                 Hushush will also soon be expanded to include screen coverage at sports events,restaurants,shopping malls and flights.
 
                             </p>
+                            <div class="inline social">
+                                <div class="social-icons">
+                                <img src="images/fb2.svg" class="img-circle" style="animation-delay:1s;animation-duration: 3s">
+                                </div>
+                                <div class="social-icons">
+                                    <img src="images/insta.jpg" class="img-circle" style="animation-delay: 1.2s;animation-duration: 3s">
+                                </div>
+                                <div class="social-icons">
+                                    <img src="images/twitter.png" class="img-circle" style="animation-delay: 1.4s;animation-duration: 3s">
+                                </div>
+                            </div>
                             <p class="con">To learn about Hushush, please <span>contact us</span></p>
                             <div class="conDet">
                             <p>Email:hush@hushush.co<br>Mob:+917034444577</p>
