redirect to base index from list/index

--- a/list/index.html
+++ b/list/index.html
@@ -1,7 +1,13 @@
 <html>
+<head>
+    <script type="text/javascript">
+        window.location="../index.html";
+    </script>
+</head>
 <body>
 <h1>
 Hello
 </h1>
+
 </body>
 </html>
