social media icons changed

--- a/index.html
+++ b/index.html
@@ -178,13 +178,13 @@
                             </p>
                             <div class="inline social">
                                 <div class="social-icons">
-                                    <a href="https://www.facebook.com/Hushush-1582161901852535/"> <img src="images/fb2.svg" class="img-circle" style="animation-delay:1s;animation-duration: 3s"></a>
+                                    <a href="https://www.facebook.com/Hushush-1582161901852535/"> <img src="images/fblogo.svg" class="img-circle" style="animation-delay:1s;animation-duration: 3s"></a>
                                 </div>
                                 <div class="social-icons">
-                                    <a href="https://www.instagram.com/hushush_wow/"> <img src="images/insta.jpg" class="img-circle" style="animation-delay: 1.2s;animation-duration: 3s"></a>
+                                    <a href="https://www.instagram.com/hushush_wow/"> <img src="images/instalogo.png" class="img-circle" style="animation-delay: 1.2s;animation-duration: 3s"></a>
                                 </div>
                                 <div class="social-icons">
-                                    <a href="https://twitter.com/hushushwow"> <img src="images/twitter.png" class="img-circle" style="animation-delay: 1.4s;animation-duration: 3s"></a>
+                                    <a href="https://twitter.com/hushushwow"> <img src="images/twitterlogo.png" class="img-circle" style="animation-delay: 1.4s;animation-duration: 3s"></a>
                                 </div>
                             </div>
                             <p class="con">To learn about Hushush, please <span>contact us</span></p>
